--- a/correction/data/pdf_templates/plain.html
+++ b/correction/data/pdf_templates/plain.html
@@ -17,6 +17,10 @@
                 left: 50pt; width: 512pt; top: 802pt; height: 20pt;
             }
         }
+        body {
+            font-family: 'Times New Roman';
+            font-size: 130%;
+        }
     </style>
 </head>
 <body>
