Fix error of bg-header of pdf report

--- a/correction/data/pdf_templates/plain.html
+++ b/correction/data/pdf_templates/plain.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         @page {
-            background-image: url("C:/users/Alireza/Documents/projects/AIprep/correction/data/pdf_templates/bg-header.png");
+            background-image: url("correction/data/pdf_templates/bg-header.png");
             size: a4 portrait;
             @frame header_frame {           /* Static Frame */
                 -pdf-frame-content: header_content;
